force-app/main/default/objects/Bank__c/Bank__c.object-meta.xml
<CustomObject>
    <description>All FDIC-insured banks in the US from the BankFind bulk data. Update annually. https://banks.data.fdic.gov/bankfind-suite/bulkData/bulkDataDownload; 

All NCUA-insured credit unions in the US from the NCUA Credit Union Custom Query. Update annually. https://webapps.ncua.gov/CustomQuery/Home; 

Non-Bank FIs added on an ad-hoc basis</description>
    <label>Financial Institution</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Institutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>