force-app/main/default/objects/Bank__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>National bank, Federal Reserve System (FRS) member</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>State commercial bank, FRS member</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>State industrial bank, FRS member</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>State commercial bank, not FRS member</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>State industrial bank, not FRS member</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>State nonmember mutual bank</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Federal chartered savings and co-operative bank – stock</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Federal chartered savings and co-operative bank – mutual</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>Federal chartered stock savings bank (historical)</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>Federal chartered mutual savings bank (historical)</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>State chartered thrift – stock</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>State chartered thrift – mutual</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Federal chartered thrift – stock</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>Federal chartered thrift – mutual</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>State chartered stock savings and co-operative bank</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>State chartered mutual savings and co-operative bank</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Insured domestic offices of foreign banks (International Banking Act(IBA))</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Nondeposit trust company, OCC chartered</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>Commercial bank</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Industrial bank</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>Nondeposit trust company, state chartered, not FRS member</label>
            </value>
            <value>
                <fullName>57</fullName>
                <label>New York investment company</label>
            </value>
            <value>
                <fullName>58</fullName>
                <label>Nondeposit trust company, state chartered, FRS member</label>
            </value>
            <value>
                <fullName>59</fullName>
                <label>Nondeposit trust company</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>Noninsured private bank</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>Noninsured loan workout bank, OCC chartered</label>
            </value>
            <value>
                <fullName>63</fullName>
                <label>Noninsured loan workout bank, state chartered, FRS member</label>
            </value>
            <value>
                <fullName>64</fullName>
                <label>Noninsured loan workout bank, state chartered, not FRS member</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>Noninsured stock savings and co-operative bank</label>
            </value>
            <value>
                <fullName>82</fullName>
                <label>Noninsured mutual savings and co-operative bank</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>