force-app/main/default/objects/Bank__c/fields/Charter__c.field-meta.xml
<CustomField>
    <fullName>Charter__c</fullName>
    <label>Charter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STATE</fullName>
                <label>State</label>
            </value>
            <value>
                <fullName>OCC</fullName>
            </value>
            <value>
                <fullName>CU</fullName>
                <label>Credit Union</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>