force-app/main/default/objects/Bank__c/fields/Deposits__c.field-meta.xml
<CustomField>
    <fullName>Deposits__c</fullName>
    <label>Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>