force-app/main/default/objects/Bank__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date record was retrieved from FDIC data source</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>