force-app/main/default/objects/Bank__c/fields/FDIC_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>FDIC_Certificate_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FDIC Certificate Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>