force-app/main/default/objects/Bank__c/fields/Financials_Date__c.field-meta.xml
<CustomField>
    <fullName>Financials_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of most recent financial data</inlineHelpText>
    <label>Financials Date</label>
    <type>Date</type>
</CustomField>