force-app/main/default/objects/Bank__c/fields/NCUA_ID__c.field-meta.xml
<CustomField>
    <fullName>NCUA_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NCUA ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>