force-app/main/default/objects/Bank__c/fields/Offices__c.field-meta.xml
<CustomField>
    <fullName>Offices__c</fullName>
    <label>Offices</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>