force-app/main/default/objects/Bank__c/fields/Pre_Tax_ROA__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tax_ROA__c</fullName>
    <label>Pre-Tax ROA</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>