force-app/main/default/objects/Bank__c/fields/Regulator__c.field-meta.xml
<CustomField>
    <fullName>Regulator__c</fullName>
    <label>Regulator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OCC</fullName>
            </value>
            <value>
                <fullName>FDIC</fullName>
            </value>
            <value>
                <fullName>FED</fullName>
                <label>Federal Reserve</label>
            </value>
            <value>
                <fullName>STATE</fullName>
                <label>State</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>