force-app/main/default/objects/Bank__c/fields/ROA__c.field-meta.xml
<CustomField>
    <fullName>ROA__c</fullName>
    <label>ROA</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>