force-app/main/default/objects/Bank__c/fields/ROE__c.field-meta.xml
<CustomField>
    <fullName>ROE__c</fullName>
    <label>ROE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>