force-app/main/default/objects/Bank__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>Commercial Lending Specialization</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Agricultural Specialization</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Mortgage Lending Specialization</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>All Other Under 1 Billion</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Other Specialized Under 1 Billion</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>All Other Over 1 Billion</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Consumer Lending Specialization</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>International Specialization</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Credit-card Specialization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>