force-app/main/default/objects/Bank__c/recordTypes/Credit_Union.recordType-meta.xml
<RecordType>
    <fullName>Credit_Union</fullName>
    <active>true</active>
    <label>Credit Union</label>
</RecordType>