force-app/main/default/objects/Bank__c/recordTypes/Non_Bank_FI.recordType-meta.xml
<RecordType>
    <fullName>Non_Bank_FI</fullName>
    <active>true</active>
    <label>Non-Bank FI</label>
</RecordType>